--- a/accounts-dev.yml
+++ b/accounts-dev.yml
@@ -11,3 +11,6 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
+contact:
+  email:
+    - tarun67@gmail.com
