--- a/loans-dev.yml
+++ b/loans-dev.yml
@@ -11,3 +11,8 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
