--- a/loans-dev.yml
+++ b/loans-dev.yml
@@ -1,14 +1,15 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb
+    url: jdbc:mysql://localhost:3307/commondb
     driverClassName: org.h2.Driver
-    username: sa
-    password: ''
-  h2:
-    console:
-      enabled: true
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    show-sql: true
+    sql:
+      init:
+        mode: always
     hibernate:
       ddl-auto: update
 management:
