--- a/cards-dev.yml
+++ b/cards-dev.yml
@@ -1,19 +1,16 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb
-    driverClassName: org.h2.Driver
-    username: sa
-    password: ''
-  h2:
-    console:
-      enabled: true
+    url: jdbc:mysql://localhost:3307/commondb
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    show-sql: true
+    sql:
+      init:
+        mode: always
     hibernate:
       ddl-auto: update
-contact:
-  email:
-    - tarun67@gmail.com
 management:
   endpoints:
     web:
