--- a/accounts-dev.yml
+++ b/accounts-dev.yml
@@ -5,11 +5,13 @@ spring:
     password: root
   jpa:
     show-sql: true
-    sql:
+    # hibernate:
+    #   ddl-auto: create
+  sql:
       init:
         mode: always
-  management:
-    endpoints:
-      web:
-        exposure:
-          include: "*"
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
