--- a/accounts-dev.yml
+++ b/accounts-dev.yml
@@ -1,12 +1,12 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3307/commondb
+    url: jdbc:mysql://localhost:3307/microservice
     username: root
     password: root
   jpa:
     show-sql: true
-    # hibernate:
-    #   ddl-auto: create
+    hibernate:
+      ddl-auto: update
   sql:
       init:
         mode: always
