--- a/loans-dev.yml
+++ b/loans-dev.yml
@@ -1,16 +1,15 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3307/commondb
+    url: jdbc:mysql://localhost:3307/microservice
     username: root
     password: root
-    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
-    sql:
-      init:
-        mode: always
     hibernate:
       ddl-auto: update
+  sql:
+      init:
+        mode: always
 management:
   endpoints:
     web:
