--- a/cards-dev.yml
+++ b/cards-dev.yml
@@ -4,6 +4,9 @@ spring:
     username: root
     password: root
   jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
     hibernate:
       ddl-auto: update
