--- a/crm-dev.yml
+++ b/crm-dev.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3307/microservice
+    url: jdbc:mysql://localhost:3307/crm
     username: root
     password: root
   jpa:
