--- a/loans-dev.yml
+++ b/loans-dev.yml
@@ -16,3 +16,17 @@ management:
     web:
       exposure:
         include: "*"
+  endpoint:
+    sessions:
+      enabled: true
+  info:
+    env:
+      enabled: true
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetchRegistry: true
+    registerWithEureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
