--- a/loans-dev.yml
+++ b/loans-dev.yml
@@ -8,6 +8,9 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
   sql:
       init:
         mode: always
